SERVER-1493 extents shouldn't be bigger than files when smallfiles